[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/tiers.gd" type="Script" id=1]
[ext_resource path="res://scenes/egypt/pyramidBack.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/pyramid/tier1.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/impact.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/images/pyramid/tier2.png" type="Texture" id=5]
[ext_resource path="res://assets/images/pyramid/tier3.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[node name="tiers" type="Node2D"]
script = ExtResource( 1 )

[node name="pyramidBack" parent="." instance=ExtResource( 2 )]

[node name="tier3" type="TextureButton" parent="."]
margin_left = 418.875
margin_top = 56.2531
margin_right = 726.875
margin_bottom = 312.253
rect_scale = Vector2( 0.6, 0.6 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="tier3Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 423.867
margin_top = 121.994
margin_right = 599.867
margin_bottom = 197.994
custom_fonts/font = SubResource( 1 )
text = "TIER 3"
align = 1
valign = 1

[node name="tier2" type="TextureButton" parent="."]
margin_left = 320.157
margin_top = 216.522
margin_right = 970.157
margin_bottom = 472.522
rect_scale = Vector2( 0.6, 0.6 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="tier2Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 423.867
margin_top = 257.994
margin_right = 599.867
margin_bottom = 333.994
custom_fonts/font = SubResource( 1 )
text = "TIER 2"
align = 1
valign = 1

[node name="tier1" type="TextureButton" parent="."]
margin_left = 265.638
margin_top = 375.675
margin_right = 1059.64
margin_bottom = 637.676
rect_scale = Vector2( 0.6, 0.6 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="tier1Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 423.867
margin_top = 407.994
margin_right = 599.867
margin_bottom = 483.994
custom_fonts/font = SubResource( 1 )
text = "TIER 1"
align = 1
valign = 1

[node name="nextSceneBtn" type="Button" parent="."]
margin_left = 951.218
margin_top = 527.426
margin_right = 1024.22
margin_bottom = 599.426
flat = true
[connection signal="mouse_entered" from="tier3" to="." method="_on_tier3_mouse_entered"]
[connection signal="mouse_exited" from="tier3" to="." method="_on_tier3_mouse_exited"]
[connection signal="pressed" from="tier3" to="." method="_on_tier3_pressed"]
[connection signal="mouse_entered" from="tier2" to="." method="_on_tier2_mouse_entered"]
[connection signal="mouse_exited" from="tier2" to="." method="_on_tier2_mouse_exited"]
[connection signal="pressed" from="tier2" to="." method="_on_tier2_pressed"]
[connection signal="mouse_entered" from="tier1" to="." method="_on_tier1_mouse_entered"]
[connection signal="mouse_exited" from="tier1" to="." method="_on_tier1_mouse_exited"]
[connection signal="pressed" from="tier1" to="." method="_on_tier1_pressed"]
[connection signal="pressed" from="nextSceneBtn" to="." method="_on_nextSceneBtn_pressed"]
